Fixed alignment

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ a:hover {
 
 .main {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     padding: 10px;
     background-color: #c5c0c0;
@@ -57,6 +59,7 @@ a:hover {
 .img-area {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin: 5px;
 }
 
